--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    - docker biuld -t abhipin286/docker-react -f Dockerfile.dev .
+    - docker build -t abhipin286/docker-react -f Dockerfile.dev .
 
 script:
     - docker run abhipin286/docker-react npm run test -- --coverage
